--- a/index.html
+++ b/index.html
@@ -4,49 +4,48 @@
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
 <title>Keemart Auto Scheduler</title>
-
-<!-- Handsontable 样式 -->
 <link rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/handsontable@13/dist/handsontable.full.min.css"/>
-
 <style>
-  body{font-family:sans-serif;padding:20px;background:#f6f6f6}
-  h1{color:#2c3e50}
-  #tables{display:flex;gap:40px;flex-wrap:wrap;align-items:flex-start}
-  .hot-box{width:520px;height:360px;background:#fff;border:1px solid #ccc}
-  #genBtn{
-    display:block;                 /* 独占一行 */
-    margin-top:30px;
-    padding:12px 28px;
-    font-size:16px;
-    background:#27ae60;
-    color:#fff;border:none;cursor:pointer
+  /* 页面整体滚动，保证表格不重叠 */
+  html,body { height:100%; margin:0; }
+  body { font-family:sans-serif; background:#f6f6f6; padding:24px; box-sizing:border-box; overflow-y:auto; }
+
+  h1 { color:#2c3e50; margin:0 0 10px; }
+  section { margin-bottom:40px; }
+  .hot-box { width:100%; max-width:920px; height:360px; border:1px solid #ccc; background:#fff; }
+
+  #genBtn {
+    display:block; width:240px; margin:32px 0;
+    padding:14px 0; font-size:16px; font-weight:bold;
+    background:#27ae60; color:#fff; border:none; cursor:pointer;
   }
-  table.result{width:100%;border-collapse:collapse;margin-top:24px;background:#fff}
-  table.result th,table.result td{border:1px solid #ccc;padding:6px;text-align:center}
-  table.result th{background:#2c3e50;color:#fff}
+
+  table.result { width:100%; max-width:920px; border-collapse:collapse; background:#fff; margin-bottom:40px; }
+  table.result th, table.result td { border:1px solid #ccc; padding:6px; text-align:center; }
+  table.result th { background:#2c3e50; color:#fff; }
 </style>
 </head>
-
 <body>
-<h1>Keemart Auto Scheduler</h1>
-<p>① 单击目标表格空行后 <b>Ctrl + V</b> 粘贴 Excel；② 点 <b>Generate Schedule</b>。</p>
 
-<div id="tables">
-  <div>
-    <h3>Location Table</h3>
-    <div id="locTable" class="hot-box"></div>
-  </div>
-  <div>
-    <h3>Team Table</h3>
-    <div id="teamTable" class="hot-box"></div>
-  </div>
-</div>
+<h1>Keemart Auto Scheduler</h1>
+
+<section>
+  <h2>① 粘贴 Location Table</h2>
+  <p>选中空行后 <b>Ctrl + V</b> 把整块 Excel 点位表贴进来</p>
+  <div id="locTable" class="hot-box"></div>
+</section>
+
+<section>
+  <h2>② 粘贴 Team Table</h2>
+  <p>同样方法，把 BDM & Team Size 贴进来</p>
+  <div id="teamTable" class="hot-box"></div>
+</section>
 
 <button id="genBtn">Generate Schedule</button>
+
 <div id="output"></div>
 
-<!-- Handsontable 脚本 -->
 <script src="https://cdn.jsdelivr.net/npm/handsontable@13/dist/handsontable.full.min.js"></script>
 <script src="script.js"></script>
 </body>
