--- a/index.html
+++ b/index.html
@@ -1,71 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <title>Keemart Auto Scheduler</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1.0" />
+<title>Keemart Auto Scheduler</title>
 
-  <!-- Handsontable 样式 -->
-  <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/handsontable@13/dist/handsontable.full.min.css"/>
+<link rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/handsontable@13/dist/handsontable.full.min.css"/>
 
-  <style>
-    /* 页面整体滚动容器 */
-    html, body { height: 100%; margin: 0; }
-    body {
-      font-family: sans-serif;
-      background: #f6f6f6;
-      padding: 24px;
-      box-sizing: border-box;
-    }
+<style>
+  html,body{height:100%;margin:0}
+  body{font-family:sans-serif;background:#f6f6f6;padding:24px;box-sizing:border-box;overflow-y:auto}
 
-    h1 { margin: 0 0 10px; color: #2c3e50; }
-    section { margin-bottom: 48px; }
+  h1{margin:0 0 12px;color:#2c3e50}
+  section{margin-bottom:48px}
+  .hot-box{width:100%;max-width:920px;height:360px;background:#fff;border:1px solid #ccc}
 
-    /* 表格容器：占一整行，不允许并排 */
-    .hot-box {
-      width: 100%;          /* 100 % 宽，整行独占 */
-      height: 360px;
-      border: 1px solid #ccc;
-      background: #fff;
-    }
+  #genBtn{display:block;width:240px;margin:32px 0;padding:14px 0;
+          font-size:16px;font-weight:bold;background:#27ae60;color:#fff;border:none;cursor:pointer}
 
-    /* 按钮独占一行，永不被遮 */
-    #genBtn {
-      display: block;
-      width: 240px;
-      margin: 32px auto 0;
-      padding: 14px 0;
-      font-size: 16px;
-      font-weight: bold;
-      background: #27ae60;
-      color: #fff;
-      border: none;
-      cursor: pointer;
-    }
-
-    /* 结果表样式 */
-    table.result {
-      width: 100%;
-      border-collapse: collapse;
-      background: #fff;
-      margin: 40px 0;
-    }
-    table.result th, table.result td {
-      border: 1px solid #ccc;
-      padding: 6px;
-      text-align: center;
-    }
-    table.result th { background: #2c3e50; color: #fff; }
-  </style>
+  #output{margin:60px 0}
+  table.result{width:100%;max-width:920px;margin-bottom:40px;border-collapse:collapse;background:#fff}
+  table.result th,table.result td{border:1px solid #ccc;padding:6px;text-align:center}
+  table.result th{background:#263444;color:#fff}
+</style>
 </head>
 
 <body>
   <h1>Keemart Auto Scheduler</h1>
-
   <section>
     <h2>① 粘贴 Location Table</h2>
-    <p>选中空行后 <b>Ctrl + V</b> 把整块点位表贴进来</p>
+    <p>选中空行后 <b>Ctrl + V</b> 把点位表贴进来</p>
     <div id="locTable" class="hot-box"></div>
   </section>
 
@@ -76,12 +41,9 @@
   </section>
 
   <button id="genBtn">Generate Schedule</button>
-
   <div id="output"></div>
 
-  <!-- Handsontable 脚本 -->
   <script src="https://cdn.jsdelivr.net/npm/handsontable@13/dist/handsontable.full.min.js"></script>
-  <!-- 你的排班逻辑 -->
   <script src="script.js"></script>
 </body>
 </html>
