--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           font-size:16px;font-weight:bold;background:#27ae60;color:#fff;border:none;cursor:pointer}
   #output{margin:60px 0 120px}
   table.result{width:100%;max-width:940px;margin-bottom:40px;border-collapse:collapse;background:#fff}
-  table.result th,table.result td{border:1px solid #ccc;padding:6px;text-align:center}
+  table.result th,table.result td{border:1px solid #ccc;padding:6px;text-align:center;white-space:pre-line}
   table.result th{background:#263444;color:#fff}
   .filterBox{margin:24px 0}
 </style>
@@ -35,7 +35,6 @@
 </section>
 
 <button id="genBtn">Generate Schedule</button>
-
 <div id="output"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/handsontable@13/dist/handsontable.full.min.js"></script>
